--- a/camera_recog/CMakeLists.txt
+++ b/camera_recog/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-add_executable( locate main.cpp )
+add_executable( locate main.cpp qr_br.cpp )
 target_link_libraries( locate ${OpenCV_LIBS} )
